kubernetes/kasper/demo/03-ingress.yml
# 03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  ingressClassName: nginx # kopplar vår ingress till den installerade nginx-ingress
  tls: # sätter att vi ska bara acceptera https trafik till er domän
    - hosts:
        - devopsbth.tech
      secretName: demo-tls # det kommer senare skapas en secret med detta namnet som innehåller certificatet för vårt domännamn.
  rules:
    - host: devopsbth.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuard
                port:
                  number: 80
